# Coursework_2

./: .coverage  .coveragerc  .flake8   .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
docs/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_class_api_py.html  z_145eef247bfb46b6_base_class_file_py.html  z_145eef247bfb46b6_hh_class_py.html  z_145eef247bfb46b6_interaction_function_py.html  z_145eef247bfb46b6_vacancies_class_file_py.html  z_145eef247bfb46b6_vacancies_class_py.html
src/: base_class_api.py  base_class_file.py  hh_class.py  interaction_function.py  vacancies_class.py  vacancies_class_file.py
tests/: conftest.py  test_hh_class.py  test_vacancies_class.py  test_vacancies_class_file.py
